fix: center align header items

--- a/styles/header.module.css
+++ b/styles/header.module.css
@@ -9,9 +9,14 @@
 
 .linksContainer {
     flex-grow: 4;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: center;
 }
 
 .logo {
+    display: flex;
     flex-grow: 1;
     justify-content: center;
     align-items: center;
